--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-		<title>Coming Soon Template</title>
-        <meta name="keywords" content="">
-		<meta name="description" content="">
+		<title>Recruitment Agency Maldives - Coming Soon</title>
+        <meta name="keywords" content="Recruitment, Agency, Maldives">
+		<meta name="description" content="Recruitment Agency Maldives - Your trusted partner for recruitment services">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- 
-    	Coming Template
-    	http://www.templatemo.com/preview/templatemo_447_coming
-    	-->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700" rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/animate.min.css">
@@ -32,11 +28,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="wow bounceIn" data-wow-delay="0.9s">Com<small>in</small>g</h1>
+					<h1 class="wow bounceIn" data-wow-delay="0.9s">Recruit<small>ment</small> Agency</h1>
 					<h2 class="element">
-						<span class="sub-element">Hello, our website is under construction.</span>
+						<span class="sub-element">Hello, Recruitment Agency Maldives is under construction.</span>
 						<span class="sub-element">We are currently working on it. Stay tuned!</span>
-                        <span class="sub-element">Thank you for visiting templatemo</span>
+                        <span class="sub-element">Thank you for visiting Recruitment Agency Maldives</span>
 					</h2>
                     
                     <!-- Edit js/init.js file for the date and time -->
@@ -82,27 +78,27 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="title wow bounceIn">
-						<h2>Features</h2>
+						<h2>Our Features</h2>
 					</div>
 					<div class="col-md-3 col-sm-6 wow fadeInUp templatemo-feature" data-wow-delay="0.6s">
 						<i class="fa fa-mobile"></i>
 						<h4 class="text-uppercase">Fully Responsive</h4>
-						<p>Lorem ipsum dolor sit consectetur ang elit doloribus magni incidunt fugit assumenda atque.</p>
+						<p>Recruitment Agency Maldives is fully responsive and adapts to all screen sizes.</p>
 					</div>
 					<div class="col-md-3 col-sm-6 wow fadeInUp templatemo-feature" data-wow-delay="0.6s">
 						<i class="fa fa-cogs"></i>
 						<h4 class="text-uppercase">Bootstrap 3.3.4</h4>
-						<p>Lorem ipsum dolor sit consectetur ang elit doloribus magni incidunt fugit assumenda atque.</p>
+						<p>We use the latest Bootstrap framework to ensure a smooth experience on any device.</p>
 					</div>
 					<div class="col-md-3 col-sm-6 wow fadeInUp templatemo-feature" data-wow-delay="0.6s">
 						<i class="fa fa-font"></i>
 						<h4 class="text-uppercase">Google Fonts</h4>
-						<p>Lorem ipsum dolor sit consectetur ang elit doloribus magni incidunt fugit assumenda atque.</p>
+						<p>Our website uses the best Google Fonts to enhance readability and aesthetics.</p>
 					</div>
 					<div class="col-md-3 col-sm-6 wow fadeInUp templatemo-feature" data-wow-delay="0.6s">
 						<i class="fa fa-html5"></i>
 						<h4 class="text-uppercase">HTML5 &AMP; CSS3</h4>
-						<p>Feel free to use this template for your website. Tell your friends about templatemo.</p>
+						<p>Built with modern HTML5 and CSS3 technologies for a clean and polished look.</p>
 					</div>
 				</div>
 			</div>
@@ -116,7 +112,7 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="title wow bounceIn">
-						<h2>We Are Growing</h2>
+						<h2>Meet Our Team</h2>
 					</div>
 				</div>
 				<div class="col-md-6 col-sm-6 border_right border_bottom wow fadeIn" data-wow-delay="0.6s">
@@ -127,7 +123,7 @@
 						<div class="media-body">
 							<h4 class="media-heading text-uppercase">Tracy</h4>
 							<h5>Designer</h5>
-							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<p>Hassan is our creative designer, bringing a vision to life with stunning visuals and user experience.</p>
 						</div>
 					</div>
 				</div>
@@ -139,7 +135,7 @@
 						<div class="media-body">
 							<h4 class="media-heading text-uppercase">Mary</h4>
 							<h5>Developer</h5>
-							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<p>Shifza is our lead developer who ensures our website runs seamlessly and smoothly.</p>
 						</div>
 					</div>
 				</div>
@@ -151,7 +147,7 @@
 						<div class="media-body">
 							<h4 class="media-heading text-uppercase">Julia</h4>
 							<h5>Director</h5>
-							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<p>Aysha leads our agency with great passion and dedication, ensuring everything runs smoothly.</p>
 						</div>
 					</div>
 				</div>
@@ -163,7 +159,7 @@
 						<div class="media-body">
 							<h4 class="media-heading text-uppercase">Linda</h4>
 							<h5>Manager</h5>
-							<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+							<p>Moosa manages the operations of the agency, ensuring our clients receive top-notch services.</p>
 						</div>
 					</div>
 				</div>
@@ -192,38 +188,3 @@
 						</form>
 					</div>
 				</div>
-				<div class="col-md-6 col-sm-6 wow fadeInRight" data-wow-delay="0.6s">
-					<address>
-						<p><i class="fa fa-envelope-o"></i> hello@company.com</p>
-						<p><i class="fa fa-phone"></i> 010-020-0340, 090-080-0760</p>								
-						<p><i class="fa fa-map-marker"></i> 220 Another Roadside, Birdeye View, GO 54321</p>
-					</address>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- end contact -->
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<p class="templatemo-copyright">Copyright © 2084 Your Company Name</p>
-					<ul class="social_icon">
-						<li><a href="#" class="fa fa-facebook"></a></li>
-						<li><a href="#" class="fa fa-twitter"></a></li>
-						<li><a href="#" class="fa fa-google-plus"></a></li>
-						<li><a href="#" class="fa fa-linkedin"></a></li>
-					</ul>
-				</div>						
-			</div>
-		</div>
-	</footer>
-	<script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/countdown.js"></script>
-	<script src="js/init.js"></script>
-	<script src="js/wow.min.js"></script>
-	<script src="js/typed.js"></script>
-	<script src="js/custom.js"></script>
-</body>
-</html>
